1537:prevent box-shadow getting clipped by header

--- a/ui/client-react/src/components/QBForm/qbform.scss
+++ b/ui/client-react/src/components/QBForm/qbform.scss
@@ -70,7 +70,8 @@ $edit-field-padding: 5px;
         .fieldRow {
             td {
                 vertical-align: top;
-                padding-bottom: 25px;
+                padding-top: 5px;
+                padding-bottom: 20px;
             }
 
             tr:last-child td {
